# topotestix

./: .gitignore  README.md  architecture.md  flake.nix  idea.md  plan.md  pyproject.toml  testing.md
.github/workflows/: ci.yml
docs/: architecture.md  empirical-etcd-cluster.md  empirical-kafka-cluster.md  merge.md  orchestrator.md  pipeline.md  plan.md  runner.md  shrinking.md  testing.md  thesis-chapter-6-evaluation.md  topotestix.excalidraw
experiments/: README.md  kafka-cluster-case-study.md  kafka-cluster-findings.md  kafka-cluster-min-message-max.nix  kafka-cluster-sweep-1-50-fixed-20260613-summary.txt  kafka-cluster-sweep-1-50-fixed-20260613.md
experiments/etcd-cluster/: etcd-cluster-findings.md  etcd-cluster-notes.md  etcd-cluster-sweep-1-50-20260616-summary.json  etcd-cluster-sweep-1-50-20260616-summary.txt  etcd-cluster-sweep-1-50-20260616.md  etcd-cluster-v2-shrinking.md  etcd-cluster-v2-sweep-1-50-20260616-summary.json  (+2 more)
lib/: combinators.nix  default.nix  expand-topology.nix  fuzzer.nix  merge.nix  orchestrate.nix  properties.nix  runner.nix  shrinker.nix
orchestrator/: orchestrator.py
research/: external-postgresql.md  local-code.md  tradeoffs-postgresql.md
targets/: default.nix
tests/: combinators-test.nix  default.nix  expand-topology-test.nix  fuzzer-test.nix  merge-test.nix  orchestrate-test.nix  runner-test.nix  shrinker-test.nix  test_cli.py  test_orchestrator.py  test_reports.py  test_run_store.py  test_sweep.py
topotestix/: __init__.py  cli.py  events.py  nix.py  orchestrator.py  reports.py  run_store.py  runner.py  targets.py  tui.py
(+49 files in other folders)
