[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "topotestix"
version = "0.1.0"
description = "Environment-aware property-based testing for distributed systems"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
topotestix = "topotestix.cli:main"

[tool.setuptools.packages.find]
include = ["topotestix*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
